k8s/two-service-ingress-nginx-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: two-service
  labels:
    app.kubernetes.io/name: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
    spec:
      containers:
      - name: controller
        image: k8s.gcr.io/ingress-nginx/controller:v1.10.0
        args:
          - /nginx-ingress-controller
          - --configmap=$(POD_NAMESPACE)/nginx-configuration
          - --watch-namespace=two-service
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443

---

apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: two-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080  # accessible via <NodeIP>:30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443  # accessible via <NodeIP>:30443
