k8s/two-service-ingress-object.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: two-service-ingress
  namespace: two-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /java
        pathType: Prefix
        backend:
          service:
            name: java-student-app-cluster-ip-service
            port:
              number: 8080
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python-college-app-cluster-ip-service
            port:
              number: 8090
